force-app/main/default/objects/Account/fields/BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>BillingStreet__c</fullName>
    <label>BillingStreet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>