force-app/main/default/objects/Account/fields/Google_Info_Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Google_Info_Last_Sync_Date__c</fullName>
    <label>Google Info Last Sync Date</label>
    <type>Date</type>
</CustomField>