force-app/main/default/objects/Account/fields/GoogleInfo_Business_Status__c.field-meta.xml
<CustomField>
    <fullName>GoogleInfo_Business_Status__c</fullName>
    <label>GoogleInfo Business Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>