force-app/main/default/objects/Account/fields/GoogleInfo_Image_Url__c.field-meta.xml
<CustomField>
    <fullName>GoogleInfo_Image_Url__c</fullName>
    <label>GoogleInfo Image Url</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>