force-app/main/default/objects/Account/fields/GoogleInfo_International_Phone__c.field-meta.xml
<CustomField>
    <fullName>GoogleInfo_International_Phone__c</fullName>
    <label>GoogleInfo International Phone</label>
    <length>36</length>
    <type>Text</type>
</CustomField>