force-app/main/default/objects/Account/fields/GoogleInfo_Open_Close_Hours__c.field-meta.xml
<CustomField>
    <fullName>GoogleInfo_Open_Close_Hours__c</fullName>
    <label>GoogleInfo Open/Close Hours</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>