force-app/main/default/objects/Account/fields/GoogleInfo_Phone__c.field-meta.xml
<CustomField>
    <fullName>GoogleInfo_Phone__c</fullName>
    <label>GoogleInfo Phone</label>
    <length>36</length>
    <type>Text</type>
</CustomField>