force-app/main/default/objects/Account/fields/GoogleInfo_PlaceId__c.field-meta.xml
<CustomField>
    <fullName>GoogleInfo_PlaceId__c</fullName>
    <label>GoogleInfo PlaceId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>