force-app/main/default/objects/Account/fields/GoogleInfo_Rating__c.field-meta.xml
<CustomField>
    <fullName>GoogleInfo_Rating__c</fullName>
    <label>GoogleInfo Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>