force-app/main/default/objects/Account/fields/GoogleInfo_Reviews__c.field-meta.xml
<CustomField>
    <fullName>GoogleInfo_Reviews__c</fullName>
    <label>GoogleInfo Reviews</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>